--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 MatchCore = "5dd3f0b1-72a9-48ad-ae6e-79f673da005f"
 PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+Poptart = "197b51f5-fdb5-5f35-aa9f-0a14f35f5b28"
 
 [compat]
 ExprTools = "0.1"
